--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ button:focus {
 .main {
   padding: 80px 0 180px;
   position: relative;
-  background-image: url(/images/footer__bg.png);
+  background-image: url(../images/footer__bg.png);
   background-position: 0 bottom;
   background-repeat: no-repeat;
   background-size: contain;
@@ -633,7 +633,7 @@ button:focus {
   display: block;
   width: 20px;
   height: 11px;
-  background-image: url(/images/ico/arrow-up.svg);
+  background-image: url(../images/ico/arrow-up.svg);
   background-repeat: no-repeat;
   background-position: 0 0;
   background-size: contain;
