Correction of images in `style.css`

--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ button:focus {
   display: block;
   width: 7px;
   height: 15px;
-  background-image: url(/images/ico/arrow.svg);
+  background-image: url(../images/ico/arrow.svg);
   background-repeat: no-repeat;
   background-position: 0 0;
   background-size: contain;
@@ -322,7 +322,7 @@ button:focus {
   display: block;
   height: 22px;
   width: 12px;
-  background-image: url(/images/ico/arrow2.svg);
+  background-image: url(../images/ico/arrow2.svg);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: 0 0;
@@ -401,7 +401,7 @@ button:focus {
   display: block;
   width: 30px;
   height: 30px;
-  background-image: url(/images/ico/like.svg);
+  background-image: url(../images/ico/like.svg);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: 0 0;
@@ -493,7 +493,7 @@ button:focus {
   display: block;
   width: 20px;
   height: 20px;
-  background-image: url(/images/ico/map.svg);
+  background-image: url(../images/ico/map.svg);
   background-position: 0 0;
   background-repeat: no-repeat;
   background-size: contain;
@@ -518,7 +518,7 @@ button:focus {
   display: block;
   width: 20px;
   height: 20px;
-  background-image: url(/images/ico/phone.svg);
+  background-image: url(../images/ico/phone.svg);
   background-position: 0 0;
   background-repeat: no-repeat;
   background-size: contain;
@@ -543,7 +543,7 @@ button:focus {
   display: block;
   width: 20px;
   height: 20px;
-  background-image: url(/images/ico/mail.svg);
+  background-image: url(../images/ico/mail.svg);
   background-position: 0 0;
   background-repeat: no-repeat;
   background-size: contain;
@@ -568,7 +568,7 @@ button:focus {
   display: block;
   width: 20px;
   height: 20px;
-  background-image: url(/images/ico/clock.svg);
+  background-image: url(../images/ico/clock.svg);
   background-position: 0 0;
   background-repeat: no-repeat;
   background-size: contain;
@@ -733,7 +733,7 @@ button:focus {
   display: block;
   width: 30px;
   height: 30px;
-  background-image: url(/images/ico/google.svg);
+  background-image: url(../images/ico/google.svg);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: 0 0;
@@ -807,7 +807,7 @@ button:focus {
 }
 
 .post__box-services__item-img1 {
-  background-image: url(/images/slider/1-1.png);
+  background-image: url(../images/slider/1-1.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0 0;
@@ -832,7 +832,7 @@ button:focus {
 }
 
 .post__box-services__item-img3 {
-  background-image: url(/images/slider/1-2.png);
+  background-image: url(../images/slider/1-2.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0 0;
@@ -857,7 +857,7 @@ button:focus {
 }
 
 .post__box-services__item-img5 {
-  background-image: url(/images/slider/1-3.png);
+  background-image: url(../images/slider/1-3.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0 0;
@@ -899,7 +899,7 @@ button:focus {
   right: 0;
   top: 50%;
   transform: translateY(-50%);
-  background-image: url(/images/ico/arrow3.svg);
+  background-image: url(../images/ico/arrow3.svg);
   background-position: 0 0;
   background-repeat: no-repeat;
   background-size: contain;
@@ -938,7 +938,7 @@ button:focus {
   display: block;
   width: 20px;
   height: 20px;
-  background-image: url(/images/ico/share.svg);
+  background-image: url(../images/ico/share.svg);
   background-repeat: no-repeat;
   position: absolute;
   right: 0;
