--- a/css/style.scss
+++ b/css/style.scss
@@ -84,7 +84,7 @@ button:focus {
     display: block;
     width: 7px;
     height: 15px;
-    background-image: url(/images/ico/arrow.svg);
+    background-image: url(../images/ico/arrow.svg);
     background-repeat: no-repeat;
     background-position: 0 0;
     background-size: contain;
@@ -330,7 +330,7 @@ button:focus {
     display: block;
     height: 22px;
     width: 12px;
-    background-image: url(/images/ico/arrow2.svg);
+    background-image: url(../images/ico/arrow2.svg);
     background-repeat: no-repeat;
     -webkit-background-size: contain;
     background-size: contain;
@@ -411,7 +411,7 @@ button:focus {
     display: block;
     width: 30px;
     height: 30px;
-    background-image: url(/images/ico/like.svg);
+    background-image: url(../images/ico/like.svg);
     background-repeat: no-repeat;
     -webkit-background-size: contain;
     background-size: contain;
@@ -504,7 +504,7 @@ button:focus {
     display: block;
     width: 20px;
     height: 20px;
-    background-image: url(/images/ico/map.svg);
+    background-image: url(../images/ico/map.svg);
     background-position: 0 0;
     background-repeat: no-repeat;
     background-size: contain;
@@ -530,7 +530,7 @@ button:focus {
     display: block;
     width: 20px;
     height: 20px;
-    background-image: url(/images/ico/phone.svg);
+    background-image: url(../images/ico/phone.svg);
     background-position: 0 0;
     background-repeat: no-repeat;
     background-size: contain;
@@ -556,7 +556,7 @@ button:focus {
     display: block;
     width: 20px;
     height: 20px;
-    background-image: url(/images/ico/mail.svg);
+    background-image: url(../images/ico/mail.svg);
     background-position: 0 0;
     background-repeat: no-repeat;
     background-size: contain;
@@ -582,7 +582,7 @@ button:focus {
     display: block;
     width: 20px;
     height: 20px;
-    background-image: url(/images/ico/clock.svg);
+    background-image: url(../images/ico/clock.svg);
     background-position: 0 0;
     background-repeat: no-repeat;
     background-size: contain;
@@ -750,7 +750,7 @@ button:focus {
     display: block;
     width: 30px;
     height: 30px;
-    background-image: url(/images/ico/google.svg);
+    background-image: url(../images/ico/google.svg);
     background-repeat: no-repeat;
     -webkit-background-size: contain;
     background-size: contain;
@@ -828,7 +828,7 @@ button:focus {
 }
 
 .post__box-services__item-img1 {
-  background-image: url(/images/slider/1-1.png);
+  background-image: url(../images/slider/1-1.png);
   background-repeat: no-repeat;
   -webkit-background-size: cover;
   background-size: cover;
@@ -854,7 +854,7 @@ button:focus {
 }
 
 .post__box-services__item-img3 {
-  background-image: url(/images/slider/1-2.png);
+  background-image: url(../images/slider/1-2.png);
   background-repeat: no-repeat;
   -webkit-background-size: cover;
   background-size: cover;
@@ -880,7 +880,7 @@ button:focus {
 }
 
 .post__box-services__item-img5 {
-  background-image: url(/images/slider/1-3.png);
+  background-image: url(../images/slider/1-3.png);
   background-repeat: no-repeat;
   -webkit-background-size: cover;
   background-size: cover;
@@ -922,7 +922,7 @@ button:focus {
     right: 0;
     top: 50%;
     transform: translateY(-50%);
-    background-image: url(/images/ico/arrow3.svg);
+    background-image: url(../images/ico/arrow3.svg);
     background-position: 0 0;
     background-repeat: no-repeat;
     -webkit-background-size: contain;
@@ -962,7 +962,7 @@ button:focus {
     display: block;
     width: 20px;
     height: 20px;
-    background-image: url(/images/ico/share.svg);
+    background-image: url(../images/ico/share.svg);
     background-repeat: no-repeat;
     position: absolute;
     right: 0;
