--- a/css/style-second.css
+++ b/css/style-second.css
@@ -1,10 +1,10 @@
 .main--second {
-  background-image: url(/images/footer-bg.png) !important;
+  background-image: url(../images/footer-bg.png) !important;
   padding-top: 160px !important;
 }
 
 .main--third {
-  background-image: url(/images/footer-bg2.png) !important;
+  background-image: url(../images/footer-bg2.png) !important;
   padding-top: 160px !important;
 }
 
@@ -43,7 +43,7 @@
 }
 
 .post__box-services__more--dark::after {
-  background-image: url(/images/ico/arrow4.svg) !important;
+  background-image: url(../images/ico/arrow4.svg) !important;
 }
 
 .post__box-services__text--dark,
