--- a/css/style.css
+++ b/css/style.css
@@ -998,4 +998,35 @@ button:focus {
 .post__main-source__page {
   text-align: right;
 }
+
+.sideMenu {
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 90;
+}
+
+.sideMenu__inner {
+  background-color: #EEEFEC;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100%;
+  padding: 140px 0 25px;
+}
+
+.sideMenu__ico,
+.sideMenu__footer {
+  width: 100%;
+  padding: 10px 15px;
+  transition: all .3s linear;
+}
+
+.sideMenu__ico:hover,
+.sideMenu__footer:hover {
+  background-color: #cecece;
+}
 /*# sourceMappingURL=style.css.map */
