--- a/css/style.scss
+++ b/css/style.scss
@@ -1024,4 +1024,34 @@ button:focus {
   text-align: right;
 }
 
+.sideMenu {
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 90;
+}
+
+.sideMenu__inner {
+  background-color: $bg;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100%;
+  padding: 140px 0 25px;
+}
+
+.sideMenu__ico,
+.sideMenu__footer {
+  width: 100%;
+  padding: 10px 15px;
+  transition: all .3s linear;
+
+  &:hover {
+    background-color: #cecece;
+  }
+}
+
 @import url(style-second.css);
