Add new class in `style-second.css`

--- a/css/style-second.css
+++ b/css/style-second.css
@@ -8,6 +8,11 @@
   padding-top: 160px !important;
 }
 
+.main--third {
+  background-image: url(../images/footer__bg.png) !important;
+  padding-top: 160px !important;
+}
+
 .post__box--second {
   border-radius: 15px !important;
 }
