--- a/css/style.scss
+++ b/css/style.scss
@@ -1139,4 +1139,149 @@ button:focus {
   max-height: 60px;
 }
 
+.post__currency-value {
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 32px;
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
+  color: $black;
+  margin-bottom: 12px;
+}
+
+.post__currency-btn {
+  font-family: 'Bellota Text', cursive;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 25px;
+  text-transform: uppercase;
+  color: rgba($black, .75);
+  padding-right: 27px;
+  position: relative;
+
+  &::after {
+    content: "";
+    width: 13px;
+    height: 22px;
+    background-image: url(../images/ico/arrow2.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 0 0;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+}
+
+.post__currency-country-kz {
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 32px;
+  text-transform: uppercase;
+  color: $black;
+  position: relative;
+  padding-right: 50px;
+
+  &::after {
+    content: "";
+    display: block;
+    width: 40px;
+    height: 40px;
+    background-image: url(../images/ico/kz.svg);
+    background-size: contain;
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%)
+  }
+
+}
+
+.post__currency-country-ru {
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 32px;
+  text-transform: uppercase;
+  color: $black;
+  position: relative;
+  padding-right: 50px;
+
+  &::after {
+    content: "";
+    display: block;
+    width: 40px;
+    height: 40px;
+    background-image: url(../images/ico/ru.svg);
+    background-size: contain;
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%)
+  }
+
+}
+
+.post__currency-country-us {
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 32px;
+  text-transform: uppercase;
+  color: $black;
+  position: relative;
+  padding-right: 50px;
+
+  &::after {
+    content: "";
+    display: block;
+    width: 40px;
+    height: 40px;
+    background-image: url(../images/ico/us.svg);
+    background-size: contain;
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%)
+  }
+
+}
+
+.post__currency-box {
+  background: $bg;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 30px;
+  width: 33.3%;
+  cursor: pointer;
+  transition: all .2s linear;
+  margin-right: 45px;
+
+  &:last-child {
+    margin-right: 0;
+  }
+
+  &:hover {
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.342);
+  }
+}
+
+.post__currency-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.post__currency-box__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 @import url(style-second.css);
