--- a/css/style.scss
+++ b/css/style.scss
@@ -1268,7 +1268,6 @@ button:focus {
   }
 
   &:hover {
-    background-color: #ccc;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.342);
   }
 }
@@ -1287,8 +1286,7 @@ button:focus {
 
 .post__graph__inner {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: flex-start;
 }
 
 .post__graph-box__inner {
@@ -1311,8 +1309,11 @@ button:focus {
   }
 
   &:hover {
-    background-color: #ccc;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.342);
+  }
+
+  &--active {
+    background-color: #ccc;
   }
 }
 
@@ -1410,6 +1411,55 @@ button:focus {
     top: 50%;
     transform: translateY(-50%);
   }
+}
+
+.post__graph-graph__text {
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 32px;
+  text-transform: uppercase;
+  color: $black;
+}
+
+.post__graph-graph-nav {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 26px;
+  color: rgba($black, .5);
+  border-bottom: 1px solid transparent;
+  transition: all .3s linear;
+
+  &:hover {
+    border-bottom: 1px solid rgba($black, .5);
+  }
+}
+
+.post__graph-graph-nav--active {
+  color: $black;
+}
+
+.post__graph-graph__box {
+  width: 100%;
+  margin-left: 85px;
+  position: relative;
+}
+
+.post__graph-graph__text-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cursor {
+  position: absolute;
+  right: 115px;
+  bottom: 97px;
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-color: #EAC682;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 @import url(style-second.css);
