--- a/css/style.scss
+++ b/css/style.scss
@@ -280,6 +280,14 @@ button:focus {
   padding: 100px 80px 50px;
   margin-bottom: 80px;
   z-index: 100;
+
+  &--50 {
+    width: 49%;
+    padding: 100px 80px;
+    height: 100%;
+    display: block;
+    z-index: 0;
+  }
 }
 
 .post__box-wrapper {
@@ -1460,6 +1468,48 @@ button:focus {
   background-color: #EAC682;
   border-radius: 50%;
   cursor: pointer;
+}
+
+.post___subtext {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 26px;
+  text-transform: uppercase;
+  color: $black;
+  margin-bottom: 40px;
+}
+
+.post__table {
+  width: 100%;
+  text-align: left;
+  padding: 15px 16px;
+}
+
+.post__transactions--time {
+  font-weight: 400;
+  font-size: 25px;
+  line-height: 32px;
+  text-transform: uppercase;
+  color: $black;
+}
+
+.post__transactions--price {
+  font-weight: 400;
+  font-size: 25px;
+  line-height: 32px;
+  text-transform: uppercase;
+  color: #866F42;
+}
+
+.post__table-bb {
+  border-bottom: 1px solid rgba($black, .15);
+  padding: 5px;
+}
+
+.post__box-inner-50 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 @import url(style-second.css);
