Add transfer section in `profile.html`

--- a/css/style-second.scss
+++ b/css/style-second.scss
@@ -63,3 +63,15 @@ $gray: #EEEFED;
 .post__box-services__price--dark {
   color: $black !important;
 }
+
+.post__transfer-input--100 {
+  width: 100%;
+}
+
+.post__transfer-input--50px {
+  width: 50px;
+}
+
+.post__transfer-input--60px {
+  width: 60px;
+}
