--- a/css/style-second.css
+++ b/css/style-second.css
@@ -55,4 +55,16 @@
 .post__box-services__price--dark {
   color: #453D2B !important;
 }
+
+.post__transfer-input--100 {
+  width: 100%;
+}
+
+.post__transfer-input--50px {
+  width: 50px;
+}
+
+.post__transfer-input--60px {
+  width: 60px;
+}
 /*# sourceMappingURL=style-second.css.map */
