--- a/css/style.css
+++ b/css/style.css
@@ -1402,6 +1402,8 @@ button:focus {
   color: #453D2B;
   padding-left: 50px;
   position: relative;
+  margin-right: 20px;
+  margin-top: 10px;
 }
 
 .post__graph-box-percent::before {
@@ -1417,6 +1419,10 @@ button:focus {
   left: 0;
   top: 50%;
   transform: translateY(-50%);
+}
+
+.post__graph-box-percent:last-child {
+  margin-right: 0;
 }
 
 .post__graph-graph__text {
@@ -1454,6 +1460,7 @@ button:focus {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 
 .cursor {
@@ -1509,6 +1516,7 @@ button:focus {
   align-items: flex-start;
   justify-content: space-between;
   height: 750px;
+  margin-bottom: 80px;
 }
 
 .post__transfer-wrapper {
@@ -1651,5 +1659,63 @@ button:focus {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 30px;
+}
+
+.post__graph-box-percent-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.post__graph-indicators {
+  display: flex;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.post__graph-indicators-yellow {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 26px;
+  color: #EAC682;
+  position: relative;
+  padding-left: 30px;
+  margin-right: 30px;
+}
+
+.post__graph-indicators-yellow::before {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-color: #EAC682;
+  border-radius: 50%;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.post__graph-indicators-brown {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 26px;
+  color: #453D2B;
+  position: relative;
+  padding-left: 30px;
+}
+
+.post__graph-indicators-brown::before {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-color: #453D2B;
+  border-radius: 50%;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
 }
 /*# sourceMappingURL=style.css.map */
