--- a/css/style.scss
+++ b/css/style.scss
@@ -1429,6 +1429,8 @@ button:focus {
   color: $black;
   padding-left: 50px;
   position: relative;
+  margin-right: 20px;
+  margin-top: 10px;
 
   &::before {
     content: "";
@@ -1443,6 +1445,10 @@ button:focus {
     left: 0;
     top: 50%;
     transform: translateY(-50%);
+  }
+
+  &:last-child {
+    margin-right: 0;
   }
 }
 
@@ -1481,6 +1487,7 @@ button:focus {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 
 .cursor {
@@ -1536,6 +1543,7 @@ button:focus {
   align-items: flex-start;
   justify-content: space-between;
   height: 750px;
+  margin-bottom: 80px;
 }
 
 .post__transfer-wrapper {
@@ -1684,6 +1692,64 @@ button:focus {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 30px;
+}
+
+.post__graph-box-percent-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.post__graph-indicators {
+  display: flex;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.post__graph-indicators-yellow {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 26px;
+  color: #EAC682;
+  position: relative;
+  padding-left: 30px;
+  margin-right: 30px;
+
+  &::before {
+    content: "";
+    display: block;
+    width: 20px;
+    height: 20px;
+    background-color: #EAC682;
+    border-radius: 50%;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+}
+
+.post__graph-indicators-brown {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 26px;
+  color: $black;
+  position: relative;
+  padding-left: 30px;
+
+  &::before {
+    content: "";
+    display: block;
+    width: 20px;
+    height: 20px;
+    background-color: $black;
+    border-radius: 50%;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
 }
 
 @import url(style-second.css);
