--- a/css/style.scss
+++ b/css/style.scss
@@ -1752,4 +1752,13 @@ button:focus {
   }
 }
 
+.post__subtitle {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 26px;
+  text-transform: uppercase;
+  color: $black;
+  margin-bottom: 50px;
+}
+
 @import url(style-second.css);
