Fix bg-color in `.post__transfer-input`

--- a/css/style.scss
+++ b/css/style.scss
@@ -1596,6 +1596,7 @@ button:focus {
 .post__transfer-input {
   border: none;
   border-bottom: 1px solid rgba(#000, .50);
+  background-color: transparent;
   font-weight: 400;
   font-size: 20px;
   line-height: 26px;
