--- a/css/style.css
+++ b/css/style.css
@@ -1569,6 +1569,7 @@ button:focus {
 .post__transfer-input {
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  background-color: transparent;
   font-weight: 400;
   font-size: 20px;
   line-height: 26px;
