--- a/css/style.scss
+++ b/css/style.scss
@@ -1620,8 +1620,13 @@ button:focus {
   color: $black;
   padding-right: 65px;
   cursor: pointer;
+  display: none;
 
-  &--ru {
+  &--active {
+    display: block;
+  }
+
+  &-ru {
     &::before {
       content: "";
       display: block;
@@ -1636,9 +1641,17 @@ button:focus {
       top: 50%;
       transform: translateY(-50%);
     }
+
+    &--active {
+      display: block;
+    }
+
+    &--nactive {
+      display: none;
+    }
   }
 
-  &--us {
+  &-us {
     &::before {
       content: "";
       display: block;
@@ -1653,9 +1666,17 @@ button:focus {
       top: 50%;
       transform: translateY(-50%);
     }
+
+    &--active {
+      display: block !important;
+    }
+
+    &--nactive {
+      display: none;
+    }
   }
 
-  &--kz {
+  &-kz {
     &::before {
       content: "";
       display: block;
@@ -1670,6 +1691,24 @@ button:focus {
       top: 50%;
       transform: translateY(-50%);
     }
+
+    &--active {
+      display: block;
+    }
+
+    &--nactive {
+      display: none;
+    }
+  }
+
+  &--nactive {
+    display: none;
+  }
+
+  &--list {
+    display: block;
+    position: relative;
+    margin-bottom: 10px;
   }
 
   &::after {
@@ -1686,6 +1725,59 @@ button:focus {
     top: 50%;
     transform: translateY(-50%);
   }
+}
+
+.post__transfer-value_list {
+  position: absolute;
+  right: 0;
+  background-color: #fff;
+  border-radius: 5px;
+  display: block;
+  width: 130px;
+  height: 110px;
+  padding-left: 20px;
+  padding-bottom: 40px;
+  display: none;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+
+  &--active {
+    display: block;
+  }
+}
+
+.post__transfer-value-ru_list {
+  &--active {
+    display: block;
+  }
+
+  &--nactive {
+    display: none;
+  }
+}
+
+.post__transfer-value-us_list {
+  &--active {
+    display: block;
+  }
+
+  &--nactive {
+    display: none;
+  }
+}
+
+.post__transfer-value-kz_list {
+  &--active {
+    display: block;
+  }
+
+  &--nactive {
+    display: none;
+  }
+}
+
+.post__transfer-value__list {
+  position: relative;
+  margin-bottom: 10px;
 }
 
 .post__transfer-card--inner {
