--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url(style-second.css);
+@import url(media.css);
 *,
 *:before,
 *:after {
@@ -95,6 +96,9 @@ button:focus {
   position: relative;
   cursor: pointer;
   margin-left: 10px;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 38px;
 }
 
 .lang-switcher::after {
@@ -133,12 +137,6 @@ button:focus {
 
 .lang-en:hover {
   background-color: #f8deb4;
-}
-
-.lang-ru {
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 38px;
 }
 
 .header__nav-link {
