Adapted profit block for 1600px screens in `media.scss`

--- a/css/media.scss
+++ b/css/media.scss
@@ -28,4 +28,40 @@
   .container {
     max-width: 1220px !important;
   }
+
+  .post__title {
+    font-size: 25px !important;
+  }
+
+  .post__currency-value {
+    font-size: 20px !important;
+  }
+
+  .post__currency-btn {
+    font-size: 18px !important;
+  }
+
+  .post__graph-box-text {
+    font-size: 20px !important;
+  }
+
+  .post__graph-box {
+    width: 400px !important;
+  }
+
+  .post__graph-graph__box {
+    margin-left: 40px !important;
+  }
+
+  .post__graph-graph__text {
+    font-size: 20px !important;
+  }
+
+  .post__graph-graph-nav {
+    font-size: 17px !important;
+  }
+
+  .cursor {
+    right: 48px !important;
+  }
 }
