--- a/css/media.scss
+++ b/css/media.scss
@@ -64,4 +64,16 @@
   .cursor {
     right: 48px !important;
   }
+
+  .post__transactions--time {
+    font-size: 20px !important;
+  }
+
+  .post__transactions--price {
+    font-size: 20px !important;
+  }
+
+  .post__transfer-input {
+    font-size: 15px !important;
+  }
 }
