--- a/css/media.scss
+++ b/css/media.scss
@@ -76,4 +76,12 @@
   .post__transfer-input {
     font-size: 15px !important;
   }
+
+  .post__graph-box-percent {
+    font-size: 20px !important;
+  }
+
+  .post__subtitle {
+    font-size: 17px !important;
+  }
 }
