Fixed some bugs due to adaptation

--- a/css/media.scss
+++ b/css/media.scss
@@ -101,4 +101,14 @@
   .footer__link {
     font-size: 15px !important;
   }
+
+  .cursor--yellow {
+    bottom: 168px !important;
+    right: 48px !important;
+  }
+
+  .cursor--brown {
+    bottom: 130px !important;
+    right: 45px !important;
+  }
 }
