--- a/css/media.css
+++ b/css/media.css
@@ -75,5 +75,13 @@
   .footer__link {
     font-size: 15px !important;
   }
+  .cursor--yellow {
+    bottom: 168px !important;
+    right: 48px !important;
+  }
+  .cursor--brown {
+    bottom: 130px !important;
+    right: 45px !important;
+  }
 }
 /*# sourceMappingURL=media.css.map */
