--- a/css/media.scss
+++ b/css/media.scss
@@ -143,4 +143,31 @@
       width: 500px;
     }
   }
+
+  .post__more {
+    font-size: 17px !important;
+  }
+
+  .post__slider-item {
+    width: 250px !important;
+    height: 350px !important;
+    margin-right: 17px !important;
+
+    img {
+      width: 250px !important;
+    }
+  }
+
+  .post__slider-text {
+    font-size: 25px !important;
+    line-height: 30px !important;
+  }
+
+  .slick-slider {
+    height: 400px !important;
+  }
+
+  .post__slider-text {
+    max-width: 200px !important;
+  }
 }
