Adapted another one block for 1600px in `media.scss`

--- a/css/media.css
+++ b/css/media.css
@@ -126,5 +126,8 @@
   .post__slider-text {
     max-width: 200px !important;
   }
+  .post__img-full {
+    width: 100% !important;
+  }
 }
 /*# sourceMappingURL=media.css.map */
