Adapted full `main.html` for 1600px in `media.scss`

--- a/css/media.scss
+++ b/css/media.scss
@@ -174,4 +174,27 @@
   .post__img-full {
     width: 100% !important;
   }
+
+  .post__share {
+    font-size: 17px !important;
+  }
+
+  .post__main-pg {
+    font-size: 18px !important;
+    margin-bottom: 10px !important;
+  }
+
+  .post__main-text {
+    font-size: 18px !important;
+    line-height: 23px !important;
+    margin-bottom: 30px !important;
+  }
+
+  .post__main-img {
+    width: 485px !important;
+  }
+
+  .post__main-source-link {
+    font-size: 15px !important;
+  }
 }
