--- a/css/style.scss
+++ b/css/style.scss
@@ -79,6 +79,86 @@ button:focus {
   margin: 0 auto;
 }
 
+.modal {
+  position: fixed;
+  z-index: 1000;
+  background-color: rgba(#000, .5);
+  width: 100%;
+  height: 100vh;
+  display: none;
+}
+
+.modal__wrapper {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal__box {
+  background-color: $accent;
+  border-radius: 10px;
+  width: 550px;
+  height: 200px;
+  text-align: right;
+  padding: 15px 30px 20px;
+  filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.2));
+}
+
+.modal__close {
+  background-color: transparent;
+  border: none;
+  height: 30px;
+  width: 30px;
+  position: relative;
+  cursor: pointer;
+
+
+  &::before {
+    content: "";
+    display: block;
+    width: 1px;
+    height: 30px;
+    background-color: $black;
+    transform: rotate(-45deg) translateX(-50%);
+    position: absolute;
+    top: 0;
+    left: 50%;
+  }
+
+  &::after {
+    content: "";
+    display: block;
+    width: 1px;
+    height: 30px;
+    background-color: $black;
+    transform: rotate(45deg) translateX(-50%);
+    position: absolute;
+    top: 1px;
+    left: 50%;
+  }
+}
+
+.modal__inner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.modal__link {
+  margin-right: 10px;
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
+.modal__img {
+  width: 60px;
+  filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.2));
+}
+
 .header {
   background-color: $accent;
   font-family: 'Bellota Text', cursive;
