--- a/css/media.scss
+++ b/css/media.scss
@@ -234,3 +234,23 @@
     max-width: 560px !important;
   }
 }
+
+@media (max-width: 1230px) {
+  .container {
+    padding: 0 10px;
+  }
+
+  .intro__img {
+    img {
+      width: 600px !important;
+    }
+  }
+
+  .intro__content {
+    padding-left: 50px !important;
+  }
+
+  .intro__content {
+    max-width: 50% !important;
+  }
+}
