Fixed images in post__box block

--- a/css/style.scss
+++ b/css/style.scss
@@ -402,6 +402,7 @@ button:focus {
 .post__box-wrapper {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .post__content {
