--- a/css/style.css
+++ b/css/style.css
@@ -390,6 +390,7 @@ button:focus {
 .post__box-wrapper {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .post__content {
