Adapted sidebar for 580px and 550px height in `media.scss`

--- a/css/media.css
+++ b/css/media.css
@@ -279,6 +279,21 @@
   }
 }
 
+@media (max-height: 580px) {
+  .sideMenu__inner {
+    padding: 100px 0 25px !important;
+  }
+}
+
+@media (max-height: 550px) {
+  .sideMenu__ico-img {
+    width: 35px !important;
+  }
+  .sideMenu__text {
+    font-size: 16px !important;
+  }
+}
+
 @media (max-height: 500px) {
   .intro__content {
     margin-top: 50px !important;
